# deeploi

./: .gitignore  CHANGELOG.md  DOCS.md  README.md  pyproject.toml  test.ipynb
.github/workflows/: publish.yml
artifacts/cancer_xgb/: deeploi.json  metadata.json  model.joblib  schema.json
artifacts/diabetes_rf/: metadata.json  model.joblib  schema.json
artifacts/iris_demo/: deeploi.json  metadata.json  model.joblib  requirements.txt
artifacts/iris_rf/: metadata.json  model.joblib  requirements.txt
artifacts/test_model/: metadata.json  model.joblib  schema.json
examples/: catboost_classifier.py  catboost_regressor.py  imblearn_balanced_rf.py  iris_batch.csv  lightgbm_ranker.py  ngboost_regressor.py  sklearn_classifier.py  sklearn_regressor.py  xgboost_classifier.py
src/deeploi/: __init__.py  api.py  constants.py  dashboard.html  exceptions.py  inspector.py  loader.py  metadata.py  package.py  schema.py  serialization.py  serving.py  types.py
src/deeploi/utils/: __init__.py  dataframe.py  env.py  hashing.py  io.py
tests/: test_catboost.py  test_imblearn.py  test_lightgbm.py  test_ngboost.py  test_package.py  test_rankers.py  test_schema.py  test_serving.py  test_sklearn.py  test_xgboost.py
