[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeploi"
version = "0.3.0"
description = "One-line deployment for trained tabular ML models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Christian", email = "christian@example.com"}
]
keywords = ["machine-learning", "model-deployment", "api", "sklearn", "xgboost", "lightgbm", "catboost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "joblib>=1.0.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=0.24.0",
    "xgboost>=1.0.0",
    "lightgbm>=3.3.0",
    "catboost>=1.2.0",
]

[project.optional-dependencies]
tabular = [
    "xgboost>=1.0.0",
    "lightgbm>=3.3.0",
    "catboost>=1.2.0",
    "ngboost>=0.5.0",
]
ranking = [
    "lightgbm>=3.3.0",
    "catboost>=1.2.0",
]
imbalanced = [
    "imbalanced-learn>=0.10.0",
]
all = [
    "xgboost>=1.0.0",
    "lightgbm>=3.3.0",
    "catboost>=1.2.0",
    "ngboost>=0.5.0",
    "imbalanced-learn>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "requests>=2.27.0",
    "httpx>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/deeploi/deeploi"
Repository = "https://github.com/deeploi/deeploi.git"
Documentation = "https://github.com/deeploi/deeploi/blob/main/DOCS.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
deeploi = ["dashboard.html"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
